# zimbanet

./: .dockerignore  .env.local.example  .env.production.example  .gitignore  .vps-deploy-key.pub  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  tailwind.config.ts
.github/workflows/: ci.yml
public/: manifest.webmanifest  sw.js
radar/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  pyproject.toml
radar/app/: clients.py  config.py  logging.py  main.py  scheduler.py
radar/app/agents/: analista.py  curador.py  distribuidor.py  investigador.py  redator.py  visual.py  visual_slots.py
radar/app/api/: agents.py  collect.py  health.py  pipeline.py  scheduler.py
radar/app/db/: repositories.py  types.py
radar/app/llm/: client.py  pricing.py
radar/app/push/: client.py
radar/app/render/: __init__.py  client.py
radar/app/sources/: dedup.py  regional.py  rss.py  runner.py  scraper.py  video.py
radar/scripts/: backfill_week.py
radar/tests/: test_agents.py  test_curador.py  test_health.py  test_sources.py  test_video.py
scripts/: import-bombei-sources.ts  preview-social.mjs  sync-bombei.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: article-comments.tsx  auth-modal.tsx  bazardazimba-widget.tsx  breaking-bar.tsx  cookie-banner.tsx  editoria-chip.tsx  hero-block.tsx  hero-split.tsx  icon.tsx  image-picker.tsx  (+23 more)
supabase/: README.md
(+165 files in other folders)
